syntax = "proto3";

package data_node_api;

service DataNodeServiceApi {
  rpc ReadBlock(ReadBlockRequest) returns (stream ReadBlockResponse) {}
  rpc UpdateBlock(stream UpdateBlockRequest) returns (UpdateBlockResponse) {}
}

message Range {
  uint64 start = 1;
  uint64 end = 2;
}

message CreateBlocksRequest {
  uint64 count = 1;
}

message ReadBlockRequest {
  bytes block_id = 1;
  uint64 part = 2;
}

message ReadBlockResponse {
  bytes data = 1;
  uint64 size = 2;
}

message UpdateBlockRequest {
  string filename = 1;
  bytes block_id = 2;
  uint64 part = 3;
  bytes data = 4;
  Range range = 5;
  uint32 hash = 6;
}

message UpdateBlockResponse {
}